Test: aggiuntato PrenotaPosto, OccupaPosto, ModificaPrenotazione e Elimina prenotazione